--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <nav class="navbar pt-3">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
             <img src="./img/hashlogo.png.crdownload" alt="" width="30" height="30"
                 class="d-inline-block align-text-top">
             DCodeTheCulture.
