--- a/work.html
+++ b/work.html
@@ -79,6 +79,13 @@
                     <p class="card-text"> <img src="./img/React-icon.svg.png" alt="" width="30" height="30"></p>
                 </div>
             </div>
+            <div class="card mx-2 mb-2" style="width: 25rem;">
+                <a href=""> <img src="./img/drumCover.png" class="card-img-top mt-4" alt="..." height="400"></a>
+                <div class="card-body" style="margin-bottom: -20%;">
+                    <p class="card-text">The Drum kit</p>
+                    <p class="card-text">HTML | CSS</p>
+                </div>
+            </div>
 
         </div>
     </div>
