--- a/work.html
+++ b/work.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="card mx-2 mb-2" style="width: 25rem;">
-                <a href=""><img src="./img/Candy.png" class="card-img-top mt-4" alt="" height="400"></a>
+                <a href="https://dcodetheculture.github.io/Candy-/"><img src="./img/Candy.png" class="card-img-top mt-4" alt="" height="400"></a>
                 <div class="card-body" style="margin-bottom: -20%;">
                     <p class="card-text">Museum Of Candy</p>
                     <p class="card-text">HTML | CSS</p>
