--- a/work.html
+++ b/work.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="card mb-2" style="width: 25rem;">
-                <a href=""> <img src="./img/nba-logo-1.jpeg" class="card-img-top mt-4" alt="..." height="400"></a>
+                <a href=" https://dcodetheculture.github.io/Goat/"> <img src="./img/nba-logo-1.jpeg" class="card-img-top mt-4" alt="..." height="400"></a>
                 <div class="card-body" style="margin-bottom: -20%;">
                     <p class="card-text">NBA G.O.A.T</p>
                     <p class="card-text"> <img src="./img/React-icon.svg.png" alt="" width="30" height="30"></p>
