--- a/work.html
+++ b/work.html
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="card mx-2 mb-2" style="width: 25rem;">
-                <a href="https://dcodetheculture.github.io/Drummer-band/"> <img src="./img/drumCover.png" class="card-img-top mt-4" alt="..." height="400"></a>
+                <a href="https://dcodetheculture.github.io/Drummer-band/"> <img src="./img/drumAppSS.png" class="card-img-top mt-4" alt="..." height="400"></a>
                 <div class="card-body" style="margin-bottom: -20%;">
                     <p class="card-text">The Drum kit</p>
                     <p class="card-text">HTML | CSS</p>
