--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="./img/hashlogo.png.crdownload" alt="" width="30" height="30"></a>
+            <a class="navbar-brand" href="/"><img src="./img/hashlogo.png.crdownload" alt="" width="30" height="30"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
                         creating engaging, interactive digital experiences on the web. </p>
                     <p class="lead aboutBio">Well-organized person, problem solver, with high attention to detail. BIG
                         sports fan but most importantly a family man and a father of two great boys.</p>
-                    <p class="lead aboutBio">Interested in working on ambitious projects and with postive people.</p>
+                    <p class="lead aboutBio">Interested in collaborating with others to help bring innovative and creative ideas to life.</p>
                 </div>
                 
             </div>
