--- a/work.html
+++ b/work.html
@@ -48,21 +48,21 @@
             <a href="https://dcodetheculture.github.io/ScoreKeeper/"> <img src="./img/Screen Shot scorekeeper.png" class="card-img-top mt-4" alt="..."></a>
                 <div class="card-body" style="margin-bottom: -20%;">
                     <p class="card-text">Score Keeper app</p>
-                    <p class="card-text">HTML | JAVASCRIPT | CSS</p>
+                    <p class="card-text">JAVASCRIPT </p>
                 </div>
             </div>
             <div class="card mx-2 mb-2" style="width: 25rem;">
                 <a href="https://dcodetheculture.github.io/Candy-/"><img src="./img/Candy.png" class="card-img-top mt-4" alt="" height="400"></a>
                 <div class="card-body" style="margin-bottom: -20%;">
                     <p class="card-text">Museum Of Candy</p>
-                    <p class="card-text">HTML | CSS</p>
+                    <p class="card-text">CSS</p>
                 </div>
             </div>
             <div class="card mx-2 mb-2" style="width: 25rem;">
                 <a href="https://dcodetheculture.github.io/Weather-App/"> <img src="./img/weatherApp2.png" class="card-img-top mt-4" alt="..." height="400"></a>
                 <div class="card-body" style="margin-bottom: -20%;">
                     <p class="card-text">Weather App</p>
-                    <p class="card-text">HTML | <img src="./img/" alt=""> | <img src="./img/React-icon.svg.png" alt="" width="30" height="30"> </p>
+                    <p class="card-text"> <img src="./img/" alt=""> | <img src="./img/React-icon.svg.png" alt="" width="30" height="30"> </p>
                 </div>
             </div>
             <div class="card mx-2 mb-2" style="width: 25rem;">
@@ -76,14 +76,14 @@
                 <a href=" https://dcodetheculture.github.io/Goat/"> <img src="./img/nba-logo-1.jpeg" class="card-img-top mt-4" alt="..." height="400"></a>
                 <div class="card-body" style="margin-bottom: -20%;">
                     <p class="card-text">NBA G.O.A.T</p>
-                    <p class="card-text"> <img src="./img/React-icon.svg.png" alt="" width="30" height="30"></p>
+                    <p class="card-text">CSS</p>
                 </div>
             </div>
             <div class="card mx-2 mb-2" style="width: 25rem;">
                 <a href="https://dcodetheculture.github.io/Drummer-band/"> <img src="./img/drumAppSS.png" class="card-img-top mt-4" alt="..." height="400"></a>
                 <div class="card-body" style="margin-bottom: -20%;">
                     <p class="card-text">The Drum kit</p>
-                    <p class="card-text">HTML | CSS</p>
+                    <p class="card-text">JAVASCRIPT</p>
                 </div>
             </div>
 
