--- a/about.html
+++ b/about.html
@@ -48,11 +48,11 @@
         <div class="row align-items-center">
             <div class="col-lg-6">
                 <div class="aboutInfo">
-                    <p class="lead aboutBio">I'm a Front-End Developer located in New Jersey. I have a passion for
+                    <p class="lead aboutBio">I'm a Front-End Developer located in New York. I have a passion for
                         creating engaging, interactive digital experiences on the web. </p>
                     <p class="lead aboutBio">Well-organized person, problem solver, with high attention to detail. BIG
-                        sports fan but most importantly a family man and a father of two great boys.</p>
-                    <p class="lead aboutBio">Interested in collaborating with others to help bring innovative and creative ideas to life.</p>
+                        sports fan and most importantly a family man and a father of two great boys.</p>
+                    <p class="lead aboutBio">Interested in collaborating with other ambitious individuals to help bring innovative and creative ideas to life.</p>
                 </div>
                 
             </div>
