--- a/work.html
+++ b/work.html
@@ -62,7 +62,7 @@
                 <a href="https://dcodetheculture.github.io/Weather-App/"> <img src="./img/weatherApp2.png" class="card-img-top mt-4" alt="..." height="400"></a>
                 <div class="card-body" style="margin-bottom: -20%;">
                     <p class="card-text">Weather App</p>
-                    <p class="card-text"> <img src="./img/" alt=""> | <img src="./img/React-icon.svg.png" alt="" width="30" height="30"> </p>
+                    <p class="card-text"> <img src="./img/React-icon.svg.png" alt="" width="30" height="30"> </p>
                 </div>
             </div>
             <div class="card mx-2 mb-2" style="width: 25rem;">
