--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
             <div class="card mx-2 mb-2" style="width: 25rem;">
             <a href="https://dcodetheculture.github.io/ScoreKeeper/"> <img src="./img/Screen Shot scorekeeper.png" class="card-img-top mt-4" alt="..."></a>
                 <div class="card-body" style="margin-bottom: -20%;">
-                    <p class="card-text">Score Keeper app</p>
+                    <p class="card-text">Score Keeper</p>
                     <p class="card-text">JAVASCRIPT </p>
                 </div>
             </div>
